--- a/src/pages/Home/components/firstSection/firstSection.css
+++ b/src/pages/Home/components/firstSection/firstSection.css
@@ -1,12 +1,8 @@
-.parent {
-  width: 100%;
-  height: 100vh;
-  background: transparent;
-  overflow: hidden
-}
+
 .magicpattern { 
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  /* background: #000 !important; */
   background-size: cover;
   background-position: center center;
   background-repeat: repeat;
